Bug 1198648 - Status bar should obey high-contrast theme. r=mconley
UltraBlame original commit: 115ec609a6bf1bbc3e06f7cd2caa99e53b51e5d1

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -18565,22 +18565,16 @@ padding
 ;
 background
 :
-linear
 -
-gradient
-(
-#
-fff
-#
-ddd
-)
+moz
+-
+dialog
 ;
 border
 :
 1px
 none
-#
-ccc
+ThreeDShadow
 ;
 border
 -
@@ -18592,8 +18586,10 @@ solid
 ;
 color
 :
-#
-333
+-
+moz
+-
+dialogText
 ;
 text
 -
@@ -18601,6 +18597,49 @@ shadow
 :
 none
 ;
+}
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+)
+{
+.
+statuspanel
+-
+label
+{
+background
+:
+linear
+-
+gradient
+(
+#
+fff
+#
+ddd
+)
+;
+border
+-
+color
+:
+#
+ccc
+;
+color
+:
+#
+333
+;
+}
 }
 .
 statuspanel
